ec2-jenkins-server/jenkins-sg.tf
#Jenkins Security Group Resource
resource "aws_security_group" "jenkins-sg" {
    name = "jenkins-sg"
    decription = "Allow Port 22 and 8080"
    
    ingress {
        description      = "Allow SSH Traffic"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    
     ingress {
        description      = "Allow HTTPS Traffic"
        from_port        = 443
        to_port          = 443
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    
    ingress {
        description      = "Allow 8080 Traffic"
        from_port        = 8080
        to_port          = 8080
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }
}
